
[package]
name = "rediss"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
tokio-tower = "0.6.0"
tower-service = "0.3.2"
tower = { version = "0.4.13", features = ["make"] }
tokio-util = { version = "0.7.8", features = ["codec"] }

combine = "4.6.7"

http-body-util = "0.1.2"
anyhow = "1.0.59"
bytes = "1.3.0"
futures-sink = "0.3.30"
futures-util = "0.3.30"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench_protocol"
harness = false
